--- a/public/style.css
+++ b/public/style.css
@@ -1,1 +1,221 @@
-*{padding:0;margin:0;box-sizing:border-box}ul,li{list-style-type:none}h4{margin-bottom:5px}body{font-family:Arial,Helvetica,sans-serif;display:flex;justify-content:center}.line{display:flex;justify-content:center}#app{background-color:gray;width:210mm;min-height:260mm;padding:20px;padding-left:40px}#app header{display:flex;flex-direction:column;row-gap:10px}#app header .topHeader{display:flex;flex-direction:row;justify-content:space-between}#app header .headerSection{margin-top:30px;display:flex;flex-direction:row;justify-content:space-between}#app header .SaskaitosData{display:flex;justify-content:flex-end;flex-direction:row}#app main .items{margin-top:30px;display:flex;flex-direction:column;border:1px solid #000}#app main .items .TableColumns{display:flex;flex-direction:row;background-color:#d3d3d3;border-bottom:1px solid #000}#app main .items .TableColumns .Numeris{width:3%;text-align:center}#app main .items .TableColumns .Preke{border-left:1px solid #000;padding:0 5px 0 5px;width:40%}#app main .items .TableColumns .Kiekis,#app main .items .TableColumns .Kaina,#app main .items .TableColumns .Nuolaida,#app main .items .TableColumns .SuPVM,#app main .items .TableColumns .BePVM{border-left:1px solid #000;padding:0 5px 0 5px;width:11%}#app main .items .TableColumns .Kiekis{width:8%}#app main .items .TableColumns .Nuolaida{width:15%}#app main .items .item{background-color:#f0f8ff;display:flex;flex-direction:row;border-bottom:1px solid #000}#app main .items .item .itemDesc{width:40%;border-left:1px solid #000;padding:0 5px 0 5px}#app main .items .item .itemPrice,#app main .items .item .itemQuantity,#app main .items .item .itemDiscountValue,#app main .items .item .itemBePVM,#app main .items .item .itemSuPVM{display:flex;align-items:center;justify-content:right;padding:0 5px 0 5px;-moz-column-gap:10px;column-gap:10px;width:11%;border-left:1px solid #000}#app main .items .item .itemQuantity{width:8%}#app main .items .item .itemDiscountValue{width:15%}#app main .items .item .itemNr{width:3%;text-align:center}#app main .items>div:nth-child(odd){background-color:#d3d3d3}#app footer{margin-top:30px;display:flex;flex-wrap:wrap;flex-direction:row;justify-content:flex-end;width:97%;margin-left:3%}#app footer .sumosContainer{display:flex;flex-direction:row;justify-content:space-between;width:40%}#app footer .sumos{font-weight:600}#app footer .shippingPrice{text-align:start}#app footer .totalPrice{display:flex;flex-direction:column}#app footer .totalPrice .itemSumaSuPVM,#app footer .totalPrice .shippmentPrice,#app footer .totalPrice .itemSuma{text-align:end;padding:0 5px 0 5px}#app footer .totalPrice .itemSumaSuPVM{font-weight:bold}#app footer .pastabaToText{width:100%}#app footer .pastabaToText .pastaba2{margin-top:30px}#app footer .dokTerminas{display:flex;flex-direction:row;font-weight:bold;width:100%;margin-top:30px}#app footer .Isdave,#app footer .Priime{display:flex;flex-direction:row;flex-wrap:wrap;-moz-column-gap:20px;column-gap:20px;margin-top:30px}#app footer .Isdave div:nth-of-type(3),#app footer .Priime div:nth-of-type(3){width:100%;font-style:italic;font-size:12px;margin-left:150px}
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box
+}
+
+ul,
+li {
+    list-style-type: none
+}
+
+h4 {
+    margin-bottom: 5px
+}
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    justify-content: center
+}
+
+.line {
+    display: flex;
+    justify-content: center
+}
+
+#app {
+    background-color: gray;
+    width: 210mm;
+    min-height: 260mm;
+    padding: 20px;
+    padding-left: 40px
+}
+
+#app header {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px
+}
+
+#app header .topHeader {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between
+}
+
+#app header .headerSection {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between
+}
+
+#app header .SaskaitosData {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row
+}
+
+#app main .items {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid #000
+}
+
+#app main .items .TableColumns {
+    display: flex;
+    flex-direction: row;
+    background-color: #d3d3d3;
+    border-bottom: 1px solid #000
+}
+
+#app main .items .TableColumns .Numeris {
+    width: 3%;
+    text-align: center
+}
+
+#app main .items .TableColumns .Preke {
+    border-left: 1px solid #000;
+    padding: 0 5px 0 5px;
+    width: 40%
+}
+
+#app main .items .TableColumns .Kiekis,
+#app main .items .TableColumns .Kaina,
+#app main .items .TableColumns .Nuolaida,
+#app main .items .TableColumns .SuPVM,
+#app main .items .TableColumns .BePVM {
+    border-left: 1px solid #000;
+    padding: 0 5px 0 5px;
+    width: 11%
+}
+
+#app main .items .TableColumns .Kiekis {
+    width: 8%
+}
+
+#app main .items .TableColumns .Nuolaida {
+    width: 15%
+}
+
+#app main .items .item {
+    background-color: #f0f8ff;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid #000
+}
+
+#app main .items .item .itemDesc {
+    width: 40%;
+    border-left: 1px solid #000;
+    padding: 0 5px 0 5px
+}
+
+#app main .items .item .itemPrice,
+#app main .items .item .itemQuantity,
+#app main .items .item .itemDiscountValue,
+#app main .items .item .itemBePVM,
+#app main .items .item .itemSuPVM {
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    padding: 0 5px 0 5px;
+    -moz-column-gap: 10px;
+    column-gap: 10px;
+    width: 11%;
+    border-left: 1px solid #000
+}
+
+#app main .items .item .itemQuantity {
+    width: 8%
+}
+
+#app main .items .item .itemDiscountValue {
+    width: 15%
+}
+
+#app main .items .item .itemNr {
+    width: 3%;
+    text-align: center
+}
+
+#app main .items>div:nth-child(odd) {
+    background-color: #d3d3d3
+}
+
+#app footer {
+    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 97%;
+    margin-left: 3%
+}
+
+#app footer .sumosContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 40%
+}
+
+#app footer .sumos {
+    font-weight: 600
+}
+
+#app footer .shippingPrice {
+    text-align: start
+}
+
+#app footer .totalPrice {
+    display: flex;
+    flex-direction: column
+}
+
+#app footer .totalPrice .itemSumaSuPVM,
+#app footer .totalPrice .shippmentPrice,
+#app footer .totalPrice .itemSuma {
+    text-align: end;
+    padding: 0 5px 0 5px
+}
+
+#app footer .totalPrice .itemSumaSuPVM {
+    font-weight: bold
+}
+
+#app footer .pastabaToText {
+    width: 100%
+}
+
+#app footer .pastabaToText .pastaba2 {
+    margin-top: 30px
+}
+
+#app footer .dokTerminas {
+    display: flex;
+    flex-direction: row;
+    font-weight: bold;
+    width: 100%;
+    margin-top: 30px
+}
+
+#app footer .Isdave,
+#app footer .Priime {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+    margin-top: 30px
+}
+
+#app footer .Isdave div:nth-of-type(3),
+#app footer .Priime div:nth-of-type(3) {
+    width: 100%;
+    font-style: italic;
+    font-size: 12px;
+    margin-left: 150px
+}
