--- a/other/style.css
+++ b/other/style.css
@@ -7,6 +7,7 @@
 ul,
 li {
     list-style-type: none;
+
 }
 
 h4 {
@@ -16,8 +17,13 @@ h4 {
 body {
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    /* padding: 10px; */
+    align-items: center;
+    row-gap: 20px;
+    padding: 10px;
+
+
 }
 
 .line {
@@ -25,7 +31,22 @@ body {
     justify-content: center;
 }
 
+button {
+    padding: 30px;
+    height: 20px;
+
+}
+
+.buttons3 {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    align-items: center;
+}
+
 #app {
+    margin-top: 0px;
     background-color: gray;
     width: 210mm;
     min-height: 260mm;
@@ -50,9 +71,11 @@ body {
             display: flex;
             flex-direction: row;
             justify-content: space-between;
+
         }
 
         .SaskaitosData {
+
             display: flex;
             justify-content: flex-end;
             /* padding-right: 50px; */
@@ -77,6 +100,7 @@ body {
                 .Numeris {
                     width: 3%;
                     text-align: center;
+
                 }
 
                 .Preke {
@@ -131,6 +155,7 @@ body {
                 }
 
                 .itemQuantity {
+
                     width: 8%;
                 }
 
@@ -145,9 +170,12 @@ body {
             }
         }
 
-        .items > div:nth-child(odd) {
+        .items>div:nth-child(odd) {
             background-color: lightgray;
         }
+
+
+
     }
 
     footer {
@@ -170,6 +198,7 @@ body {
 
         .sumos {
             font-weight: 600;
+
         }
 
         .shippingPrice {
@@ -184,6 +213,7 @@ body {
             flex-direction: column;
             /* justify-content: space-between; */
 
+
             .itemSumaSuPVM,
             .shippmentPrice,
             .itemSuma {
@@ -196,6 +226,7 @@ body {
             .itemSumaSuPVM {
                 font-weight: bold;
             }
+
         }
 
         .pastabaToText {
@@ -203,6 +234,7 @@ body {
 
             .pastaba2 {
                 margin-top: 30px;
+
             }
         }
 
