--- a/public/stylelist.css
+++ b/public/stylelist.css
@@ -1,21 +1,104 @@
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
+body {
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    row-gap: 20px;
+    padding: 10px;
+    margin: 20px;
+}
 
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            max-width: 800px;
-        }
+table {
+    border-collapse: collapse;
+    /* width: 100%; */
+    max-width: 1000px;
+}
 
-        th,
-        td {
-            border: 1px solid #ccc;
-            padding: 8px;
-            text-align: left;
-        }
+th,
+td {
 
-        th {
-            background-color: #f2f2f2;
+    border: 1px solid #ccc;
+    padding: 10px;
+    text-align: left;
+    vertical-align: middle;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+button {
+    margin: 0 5px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.buttons {
+    top: 5px;
+    position: fixed;
+    padding-left: 10px;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+    column-gap: 20px;
+    align-items: center;
+    justify-content: flex-start;
+    row-gap: 20px;
+
+    button {
+        padding: 2px;
+        margin: 0;
+
+        a {
+            text-decoration: none;
         }
+    }
+
+
+}
+
+
+button.view {}
+
+button.edit {}
+
+button.delete {}
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.1);
+    justify-content: center;
+    overflow-y: auto;
+    align-items: flex-start;
+}
+
+.modal-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    /* margin-top: 50px; */
+    /* max-width: 1000px; */
+    /* width: 100%; */
+    max-height: 100%;
+}
+
+
+
+.close {
+    float: right;
+    font-size: 40px;
+    cursor: pointer;
+}
+
+
+#invoiceTable {
+    margin-top: 5px;
+}
