--- a/public/style.css
+++ b/public/style.css
@@ -26,6 +26,13 @@ body {
 
 }
 
+input {
+    background: none;
+    border: none;
+    text-align: right;
+    font-size: 16px;
+}
+
 .line {
     display: flex;
     justify-content: center;
